<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<name>My Area Guide</name>

	<groupId>ru.practicum</groupId>
	<artifactId>my-area-guide</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>stats</module>
        <module>core</module>
        <module>infra</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <!-- DEPENDENCIES -->
        <stats-client.version>0.0.1-SNAPSHOT</stats-client.version>
        <spring-cloud-dependencies.version>2025.0.0</spring-cloud-dependencies.version>
        <!-- PLUGINS -->
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>ru.practicum</groupId>
                <artifactId>stats-client</artifactId>
                <version>${stats-client.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.practicum</groupId>
                <artifactId>stats-common</artifactId>
                <version>${stats-client.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.practicum</groupId>
                <artifactId>core-common</artifactId>
                <version>${version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>

			</plugins>
		</pluginManagement>
	</build>

</project>
